# Son-of-Zaratan

./: .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE  README.md
inc/: array_list.h  dll.h  lexer_util.h  parser.h  printer.h  reader.h  stack.h  stack_test.h  token.h
inc/generics/: array_list.h  dll.h  hashmap.h  stack.h
inc/globals/: lexer_globals.h
inc/modules/: error.h  lexer.h  lexer_util.h  printer.h  string_util.h  token.h
src/: CMakeLists.txt  shell.c
src/engine/: CMakeLists.txt  parser.c  reader.c
src/engine/lexer/: CMakeLists.txt  lexer.c  lexer_globals.c  token.c
src/engine/lexer/util/: CMakeLists.txt  lexer_util.c
src/engine/printer/: CMakeLists.txt  error.c  printer.c
src/util/: CMakeLists.txt  stack.c
src/util/data_structures/: CMakeLists.txt  array_list.c  dll.c  generic_array_list.c  stack.c
src/util/functions/: CMakeLists.txt  lexer_util.c
src/util/string/: CMakeLists.txt  string_util.c
tests/: CMakeLists.txt  test_controller.c
tests/generics/: CMakeLists.txt  test_array_list.c  test_dll.c
tests/lexer/: CMakeLists.txt  test_lexer.c  test_lexer_util.c  test_token.c
tests/stack/: CMakeLists.txt  test_stack.c
tests/util/: CMakeLists.txt  test_array_list.c  test_dll.c  test_lexer_util.c  test_stack.c
tests/util/string_util/: CMakeLists.txt  test_string_util.c
